# stomp_station

./: .gitignore  .typos.toml  .yamllint  README.md  Taskfile.dist.yml  dprint.json  mise.toml  pyproject.toml
scripts/: check_wifi_status.py  monitor_serial.py  restart_pico.py
src/: blink.py  boot.py  config.py  index.html  main.py  wifi_led_server.py  wifi_manager.py
taskfiles/: ci.yml  fw.yml
